--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,7 @@
 
     <script src="../node_modules/three/build/three.min.js"></script>
     <script src="../node_modules/three/examples/js/GPUComputationRenderer.js"></script>
+    <script src="../node_modules/three/examples/js/controls/OrbitControls.js"></script>
     <script src="particles.js"></script>
 </head>
 <body>
@@ -15,87 +16,82 @@
 <!-- Position compute shader -->
 <script type="x-shader/x-fragment" id="positionComputeShader">
 
-            #define delta (1.0/60.0)
+    #define delta (1.0/60.0)
 
-            void main() {
+    void main() {
 
-                vec2 uv = gl_FragCoord.xy / resolution.xy;
+        vec2 uv = gl_FragCoord.xy / resolution.xy;
 
-                vec4 tmpPos = texture2D(texturePosition, uv);
-                vec3 pos = tmpPos.xyz;
+        vec4 tmpPos = texture2D(texturePosition, uv);
+        vec3 pos = tmpPos.xyz;
 
-                vec3 vel = vec3(0.0, 5.0, 0.0);
-                float mass = 1.0;
+        vec3 vel = vec3(0.0, 5.0, 0.0);
+        float mass = 1.0;
 
-                pos += vel * delta;
+        pos += vel * delta;
 
-                gl_FragColor = vec4(pos, 1.0);
-            }
-
+        gl_FragColor = vec4(pos, 1.0);
+    }
 </script>
 
 <!-- Particles vertex shader -->
 <script type="x-shader/x-vertex" id="particleVertexShader">
 
-            // For PI declaration:
-            #include <common>
+    // For PI declaration:
+    #include <common>
 
-            #define MASS 2.0
-            #define DENSITY 0.45
+    #define MASS 2.0
+    #define DENSITY 0.45
 
-            uniform sampler2D texturePosition;
+    uniform sampler2D texturePosition;
 
-            uniform float cameraConstant;
+    uniform float cameraConstant;
 
-            varying vec4 vColor;
+    varying vec4 vColor;
 
-            float radiusFromMass( float mass ) {
-                // Calculate radius of a sphere from mass and density
-                return pow( ( 3.0 / ( 4.0 * PI ) ) * mass / DENSITY, 1.0 / 3.0 );
-            }
-
-
-            void main() {
+    float radiusFromMass( float mass ) {
+        // Calculate radius of a sphere from mass and density
+        return pow( ( 3.0 / ( 4.0 * PI ) ) * mass / DENSITY, 1.0 / 3.0 );
+    }
 
 
-                vec4 posTemp = texture2D( texturePosition, uv );
-                vec3 pos = posTemp.xyz;
+    void main() {
 
-                vColor = vec4( 1.0, MASS / 250.0, 0.0, 1.0 );
 
-                vec4 mvPosition = modelViewMatrix * vec4( pos, 1.0 );
+        vec4 posTemp = texture2D( texturePosition, uv );
+        vec3 pos = posTemp.xyz;
 
-                float radius = radiusFromMass( MASS );
+        vColor = vec4( 1.0, MASS / 250.0, 0.0, 1.0 );
 
-                // Apparent size in pixels
-                if ( MASS == 0.0 ) {
-                    gl_PointSize = 0.0;
-                }
-                else {
-                    gl_PointSize = radius * cameraConstant / ( - mvPosition.z );
-                }
+        vec4 mvPosition = modelViewMatrix * vec4( pos, 1.0 );
 
-                gl_Position = projectionMatrix * mvPosition;
+        float radius = radiusFromMass( MASS );
 
-            }
+        // Apparent size in pixels
+        if ( MASS == 0.0 ) {
+            gl_PointSize = 0.0;
+        }
+        else {
+            gl_PointSize = radius * cameraConstant / ( - mvPosition.z );
+        }
 
+        gl_Position = projectionMatrix * mvPosition;
+    }
 </script>
 
 <!-- Particles fragment shader -->
 <script type="x-shader/x-fragment" id="particleFragmentShader">
+    varying vec4 vColor;
 
-            varying vec4 vColor;
+    void main() {
 
-            void main() {
+        float f = length( gl_PointCoord - vec2( 0.5, 0.5 ) );
+        if ( f > 0.5 ) {
+            discard;
+        }
+        gl_FragColor = vColor;
 
-                float f = length( gl_PointCoord - vec2( 0.5, 0.5 ) );
-                if ( f > 0.5 ) {
-                    discard;
-                }
-                gl_FragColor = vColor;
-
-            }
-
+    }
 </script>
 
 <div id="container"></div>
